# sheepdog-rs

./: Cargo.toml  README.md
crates/dog/: Cargo.toml
crates/dog/src/: cluster.rs  common.rs  main.rs  node.rs  treeview.rs  upgrade.rs  vdi.rs
crates/sheep/: Cargo.toml
crates/sheep/src/: config.rs  daemon.rs  group.rs  journal.rs  main.rs  migrate.rs  object_cache.rs  object_list_cache.rs  recovery.rs  request.rs  vdi.rs
crates/sheep/src/cluster/: local.rs  mod.rs  sdcluster.rs
crates/sheep/src/http/: kv.rs  mod.rs  oalloc.rs  s3.rs  swift.rs
crates/sheep/src/nbd/: mod.rs
crates/sheep/src/nfs/: fs.rs  handler.rs  mod.rs  mount.rs  xdr.rs
crates/sheep/src/ops/: cluster.rs  gateway.rs  local.rs  mod.rs  peer.rs
crates/sheep/src/store/: common.rs  md.rs  mod.rs  plain.rs  tree.rs
crates/sheepdog-core/: Cargo.toml
crates/sheepdog-core/src/: consistent_hash.rs  fec.rs  inode.rs  lib.rs  net.rs  sockfd_cache.rs  tcp_transport.rs  transport.rs
crates/sheepdog-dpdk/: Cargo.toml  build.rs
crates/sheepdog-dpdk/src/: eal.rs  lib.rs  packet.rs  transport.rs
crates/sheepdog-proto/: Cargo.toml
crates/sheepdog-proto/src/: constants.rs  defaults.rs  error.rs  hash.rs  inode.rs  lib.rs  node.rs  oid.rs  request.rs  vdi.rs
crates/sheepfs/: Cargo.toml
crates/sheepfs/src/: config.rs  main.rs  ops.rs  volume.rs
crates/shepherd/: Cargo.toml
crates/shepherd/src/: handler.rs  main.rs
scripts/: cluster.sh  defaults.sh  manual-ec-decode.sh  test-ec.sh  test-io.sh  test-recovery.sh
