[package]
name = "sheepdog-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sheepdog distributed storage - core shared library"

[dependencies]
sheepdog-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
sha1 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
reed-solomon-erasure = "6"
