[package]
name = "sheepfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sheepdog distributed storage - FUSE filesystem"

[[bin]]
name = "sheepfs"
path = "src/main.rs"

[dependencies]
sheepdog-proto = { workspace = true }
sheepdog-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
fuser = "0.14"
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"
